--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 
 <div class="container m-5">
-    <app-image-lightbox></app-image-lightbox>
+    <app-body></app-body>
 </div>
 
 <app-footer></app-footer>
